--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@ maintaining and optimizing web applications with a strong focus on responsivenes
 design. Adept at improving website performance and staying up to date with industry trends to maintain a
 competitive edge.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Bogor Regency</li>
+                <li>+62 8121-2142-716</li>
+                <li>arjunaarasyid62@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
